Fixes flickering of low-hanging top menu on page init & show on anchor links.

--- a/src/main/resources/web/css/semantic-ui-overrides.css
+++ b/src/main/resources/web/css/semantic-ui-overrides.css
@@ -97,6 +97,10 @@ article .text {
     margin-bottom: 2em;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
 #lower-page-nav .toc.item,
 #header-page-nav .toc.item {
     display: none;
